tests/test_assets/parser/invalid/scientific_notation_f64_overflow.cog
scientific_notation_f64_overflow::() -> void {
    value: f64 = 1e309;
}
