tests/test_assets/parser/invalid/scientific_notation_f64_overflow.expected
error: floating-point literal is out of range
    value: f64 = 1e309;
                 ^~~~~
